feat(E3.S4): Servable rule
